--- a/panier.html
+++ b/panier.html
@@ -2,8 +2,8 @@
 <html lang="fr" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Venz acheter...">
-    <title>Orinoco - Achetez en ligne !</title>
+    <meta name="description" content="Vous avez sélectionnez une de nos peluches. Découvrez tout d'elle !">
+    <title>Détail de votre produit</title>
 
     <link rel="stylesheet" href="css/style.css" />
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -15,9 +15,9 @@
 </head>
 <body>
     <header class="container px-0">
-        
+
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="index.html" class="nav-link nav-item-active navbar-brand">
+            <a href="index.html" class="nav-link navbar-brand">
                 <img src="./images/logo.png" alt="Orinoco : votre commerce en ligne !" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li class="nav-item nav-item-active">
                         <a class="nav-link" href="panier.html">Mon panier</a>
                     </li>
                     <li class="nav-item">
@@ -36,22 +36,39 @@
             </div>
         </nav>
     </header>
-    <main class="container py-3">
-        <div class="row m-3" id="cardProduit">
-            <!-- <section class="col">
-                 <div class="card">
-                     <div class="card-body">
-                         <h2 class="card-title">Titre de la carte</h2>
-                         <img src="test.jpg" alt="Alternate Text" class="w-25" />
-                         <p class="card-text">Contenu textuel de la carte</p>
-                     </div>
-                 </div>
-            </section>-->
-        </div>
+
+    <main class="container">
+        <section class="container">
+            <p class="row">
+                Votre panier est vide. Venez découvrir nos adorables peluches.
+            </p>
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">Produit</th>
+                        <th scope="col">Couleur</th>
+                        <th scope="col">Quantité</th>
+                        <th scope="col">Prix</th>
+                        <th scope="col">Sous-total</th>
+                    </tr>
+                </thead>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+            <div class="row">
+                <button class="col">Actualiser mon panier</button>
+                <p class="col">TOTAL : </p>
+            </div>
+        </section>
     </main>
 
     <footer class="container-fluid">
-        <nav  class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <ul class="navbar-nav w-75 mx-auto">
                 <li class="nav-item w-50">
                     <a class="nav-link text-center" href="#">
@@ -67,6 +84,6 @@
         </nav>
     </footer>
 
-    <script src="jsFront/front.js"></script>
+    <script src="jsFront/panierfront.js"></script>
 </body>
 </html>
