Lien index vers page produit dynamique ok debut de localstorage mis en place

--- a/panier.html
+++ b/panier.html
@@ -42,28 +42,27 @@
             <p class="row">
                 Votre panier est vide. Venez découvrir nos adorables peluches.
             </p>
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th scope="col">Produit</th>
-                        <th scope="col">Couleur</th>
-                        <th scope="col">Quantité</th>
-                        <th scope="col">Prix</th>
-                        <th scope="col">Sous-total</th>
-                    </tr>
-                </thead>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
-            <div class="row">
-                <button class="col">Actualiser mon panier</button>
-                <p class="col">TOTAL : </p>
-            </div>
+            <form>
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th scope="col">Produit</th>
+                            <th scope="col">Couleur</th>
+                            <th scope="col">Quantité</th>
+                            <th scope="col">Prix</th>
+                            <th scope="col">Sous-total</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tbody">
+
+                    </tbody>
+                </table>
+                <div class="row">
+                    <button class="col">Actualiser mon panier</button>
+                    <button class="col" formaction="index.html">Continuer mon shopping</button>
+                    <p class="col">TOTAL : </p>
+                </div>
+            </form>
         </section>
     </main>
 
