--- a/panier.html
+++ b/panier.html
@@ -39,9 +39,6 @@
 
     <main class="container">
         <section class="container">
-            <p class="row">
-                Votre panier est vide. Venez découvrir nos adorables peluches.
-            </p>
             <form>
                 <table class="table table-bordered">
                     <thead>
@@ -54,14 +51,27 @@
                         </tr>
                     </thead>
                     <tbody id="tbody">
-
                     </tbody>
                 </table>
                 <div class="row">
-                    <button class="col">Actualiser mon panier</button>
+                    <button class="col" id="reset">Ré-initialiser mon panier</button>
                     <button class="col" formaction="index.html">Continuer mon shopping</button>
-                    <p class="col">TOTAL : </p>
+                    <p class="col">TOTAL : <span id="total"></span></p>
                 </div>
+            </form>
+            <form method="post">
+                <p class="row">
+                    Afin de valider votre commande, veuillez remplir le formulaire suivant, acceptez les conditions générales de vente et confirmez votre panier.
+                </p>
+                <p>
+                    <label for="name">Nom : </label><input type="text" id="name" name="user_name" minlength="2" maxlength="47" required><br />
+                    <label for="surname">Prénom : </label><input type="text" id="surname" name="surname" minlength="2" maxlength="30" required><br />
+                    <label for="address">Adresse : </label><input type="text" id="address" name="address" required><br />
+                    <label for="cp">Code Postal : </label><input type="text" id="cp" name="cp" pattern="^((0[1-9])|([1-8][0-9])|(9[0-8])|(2A)|(2B))[0-9]{3}$" required><br />
+                    <label for="ville">Ville : </label><input type="text" id="ville" name="ville" required><br />
+                    <label for="mail">E-mail : </label><input type="email" id="mail" name="email" pattern="^[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]{2,}\.[a-z]{2,4}$" required>
+                </p>
+                <button type="submit" class="col" formaction="confirmation.html" id="valideBouton">Je valide ma commande.</button>
             </form>
         </section>
     </main>
