panier ok manque conf + visu + test unitaire

--- a/confirmation.html
+++ b/confirmation.html
@@ -38,9 +38,11 @@
     </header>
     <main class="container py-3">
         <h1>Confirmation de commande n°<span id="numeroConfirmation"></span></h1>
-        <p class="row"> Nous sommes ravis de vous annoncer que votre commande a bien été pris en compte.
-        Nous vous remercions et sommes à votre disposition pour toute demande d'informations.
-        Vous recevrez un email de confirmation dès réception de votre règlement.</p>
+        <p class="row">
+            Nous sommes ravis de vous annoncer que votre commande d'un montant total de <span id="totalCommande"></span> a bien été pris en compte.
+            Nous vous remercions et sommes à votre disposition pour toute demande d'informations.
+            Vous recevrez un email de confirmation dès réception de votre règlement.
+        </p>
     </main>
 
     <footer class="container-fluid">
@@ -59,5 +61,7 @@
             </ul>
         </nav>
     </footer>
+
+    <script src="jsFront/confirmfront.js"></script>
 </body>
 </html>
