--- a/panier.html
+++ b/panier.html
@@ -40,7 +40,7 @@
     <main class="container">
         <section class="container">
             <form>
-                <table class="table table-bordered">
+                <table id="maTable" class="table table-bordered">
                     <thead>
                         <tr>
                             <th scope="col">Produit</th>
@@ -65,13 +65,13 @@
                 </p>
                 <p>
                     <label for="name">Nom : </label><input type="text" id="name" name="user_name" minlength="2" maxlength="47" required><br />
-                    <label for="surname">Prénom : </label><input type="text" id="surname" name="surname" minlength="2" maxlength="30" required><br />
+                    <label for="firstname">Prénom : </label><input type="text" id="firstname" name="firstname" minlength="2" maxlength="30" required><br />
                     <label for="address">Adresse : </label><input type="text" id="address" name="address" required><br />
                     <label for="cp">Code Postal : </label><input type="text" id="cp" name="cp" pattern="^((0[1-9])|([1-8][0-9])|(9[0-8])|(2A)|(2B))[0-9]{3}$" required><br />
                     <label for="ville">Ville : </label><input type="text" id="ville" name="ville" required><br />
                     <label for="mail">E-mail : </label><input type="email" id="mail" name="email" pattern="^[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]{2,}\.[a-z]{2,4}$" required>
                 </p>
-                <button type="submit" class="col" formaction="confirmation.html" id="valideBouton">Je valide ma commande.</button>
+                <button type="submit" formaction="confirmation.html" class="col" id="valideBouton">Je valide ma commande.</button>
             </form>
         </section>
     </main>
