--- a/confirmation.html
+++ b/confirmation.html
@@ -14,40 +14,45 @@
     <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <header class="container px-0">
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="index.html" class="nav-link nav-item-active navbar-brand">
-                <img src="./images/logo.png" alt="Orinoco : votre commerce en ligne !" />
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-lg">
+            <a href="index.html" class="nav-link nav-item-active navbar-brand w-75 col-lg-6 col-xl-5">
+                <img src="./images/logo.png" alt="Orinoco : votre commerce en ligne !" class="img-fluid w-100" />
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler mr-5" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="panier.html">Mon panier</a>
+                        <a class="nav-link text-center" href="panier.html">Mon panier</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contactez-nous</a>
+                        <a class="nav-link text-center" href="#">Contactez-nous</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-    <main class="container py-3">
-        <h1>Confirmation de commande n°<span id="numeroConfirmation"></span></h1>
-        <p class="row">
-            Nous sommes ravis de vous annoncer que votre commande d'un montant total de <span id="totalCommande"></span> a bien été pris en compte.
+    <main class="container-fluid p-5">
+        <h1 class="my-5">Confirmation de commande</h1>
+        <p class="my-5">
+            Nous sommes ravis de vous annoncer que votre commande a bien été pris en compte.
             Nous vous remercions et sommes à votre disposition pour toute demande d'informations.
-            Vous recevrez un email de confirmation dès réception de votre règlement.
+            Vous recevrez un email de confirmation dès réception de votre règlement.            
         </p>
+        <p class="my-5 text-center">
+            Numéro de commande : <br />
+            <span id="numeroConfirmation"></span>
+            <br />
+            Montant de total de votre commande : <span id="totalCommande"></span> €
+        </pclass="my-5">
     </main>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid position-fixed fixed-bottom">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <ul class="navbar-nav w-75 mx-auto">
+            <ul class="navbar-nav w-auto mx-auto">
                 <li class="nav-item w-50">
                     <a class="nav-link text-center" href="#">
                         Mentions Légales
