--- a/index.html
+++ b/index.html
@@ -14,45 +14,46 @@
     <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <header class="container px-0">
-        
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="index.html" class="nav-link nav-item-active navbar-brand">
-                <img src="./images/logo.png" alt="Orinoco : votre commerce en ligne !" />
+    <header>    
+        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-lg">
+            <a href="index.html" class="nav-link nav-item-active navbar-brand w-75 col-lg-6 col-xl-5">
+                <img src="./images/logo.png" alt="Orinoco : votre commerce en ligne !" class="img-fluid w-100"/>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler mr-5" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="panier.html">Mon panier</a>
+                        <a class="nav-link text-center" href="panier.html">Mon panier</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contactez-nous</a>
+                        <a class="nav-link text-center" href="#">Contactez-nous</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-    <main class="container py-3">
-        <div class="row m-3" id="cardProduit">
-            <!-- <section class="col">
-                 <div class="card">
-                     <div class="card-body">
-                         <h2 class="card-title">Titre de la carte</h2>
-                         <img src="test.jpg" alt="Alternate Text" class="w-25" />
-                         <p class="card-text">Contenu textuel de la carte</p>
-                     </div>
-                 </div>
+    <main class="container-fluid py-3 container-md mx-lg-auto">
+        <h1 class="p-3 text-center">Nos produits</h1>
+        <div class="row p-3" id="cardProduit">
+           
+            <!--<section class="col">
+                <div class="card">
+                    <div class="card-body border border-dark">
+                        <h2 class="card-title py-4">Titre de la carte</h2>
+                        <img src="test.jpg" alt="Alternate Text" class="img-fluid py-3" />
+                        <p class="card-text py-3">Contenu textuel de la carte</p>
+                    </div>
+                </div>
             </section>-->
         </div>
     </main>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid position-fixed fixed-bottom">
         <nav  class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <ul class="navbar-nav w-75 mx-auto">
+            <ul class="navbar-nav w-auto mx-auto">
                 <li class="nav-item w-50">
                     <a class="nav-link text-center" href="#">
                         Mentions Légales
