--- a/panier.html
+++ b/panier.html
@@ -14,71 +14,71 @@
     <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <header class="container px-0">
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="index.html" class="nav-link navbar-brand">
-                <img src="./images/logo.png" alt="Orinoco : votre commerce en ligne !" />
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-lg">
+            <a href="index.html" class="nav-link nav-item-active navbar-brand w-75 col-lg-6 col-xl-5">
+                <img src="./images/logo.png" alt="Orinoco : votre commerce en ligne !" class="img-fluid w-100" />
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler mr-5" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item nav-item-active">
-                        <a class="nav-link" href="panier.html">Mon panier</a>
+                    <li class="nav-item">
+                        <a class="nav-link text-center" href="panier.html">Mon panier</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contactez-nous</a>
+                        <a class="nav-link text-center" href="#">Contactez-nous</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-
-    <main class="container">
-        <section class="container">
+    <main class="container-fluid mt-5">
+        <section>
+            <h1>Récapitulatif de votre commande</h1>
             <form>
-                <table id="maTable" class="table table-bordered">
-                    <thead>
+                <table id="maTable" class="table table-bordered table-responsive my-5">
+                    <thead class="thead-dark text-center">
                         <tr>
-                            <th scope="col">Produit</th>
-                            <th scope="col">Couleur</th>
-                            <th scope="col">Quantité</th>
-                            <th scope="col">Prix</th>
-                            <th scope="col">Sous-total</th>
+                            <th scope="col" class="align-middle">Produit</th>
+                            <th scope="col" class="align-middle">Couleur</th>
+                            <th scope="col" class="align-middle">Quantité</th>
+                            <th scope="col" class="align-middle">Prix</th>
+                            <th scope="col" class="align-middle">Sous-total</th>
                         </tr>
                     </thead>
                     <tbody id="tbody">
                     </tbody>
                 </table>
                 <div class="row">
-                    <button class="col" id="reset">Ré-initialiser mon panier</button>
-                    <button class="col" formaction="index.html">Continuer mon shopping</button>
-                    <p class="col">TOTAL : <span id="total"></span></p>
+                    <p class="col text-center mb-5">TOTAL : <span id="total"></span></p>
+
+                    <button class="btn btn-dark btn-lg btn-block mb-3 mx-3" formaction="index.html">Continuer mon shopping</button>
+                    <button class="btn btn-light btn-sm btn-block mx-5" id="reset">Ré-initialiser mon panier</button>
                 </div>
             </form>
-            <form method="post">
+            <form method="post" class="m-5">
                 <p class="row">
                     Afin de valider votre commande, veuillez remplir le formulaire suivant, acceptez les conditions générales de vente et confirmez votre panier.
                 </p>
-                <p>
-                    <label for="name">Nom : </label><input type="text" id="name" name="user_name" minlength="2" maxlength="47" required><br />
-                    <label for="firstname">Prénom : </label><input type="text" id="firstname" name="firstname" minlength="2" maxlength="30" required><br />
-                    <label for="address">Adresse : </label><input type="text" id="address" name="address" required><br />
-                    <label for="cp">Code Postal : </label><input type="text" id="cp" name="cp" pattern="^((0[1-9])|([1-8][0-9])|(9[0-8])|(2A)|(2B))[0-9]{3}$" required><br />
-                    <label for="ville">Ville : </label><input type="text" id="ville" name="ville" required><br />
-                    <label for="mail">E-mail : </label><input type="email" id="mail" name="email" pattern="^[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]{2,}\.[a-z]{2,4}$" required>
+                <p class="mb-5">
+                    <label class="col-4" for="name">Nom : </label><input class="col-8" type="text" id="name" name="user_name" minlength="2" maxlength="47" required><br />
+                    <label class="col-4" for="firstname">Prénom : </label><input class="col-8" type="text" id="firstname" name="firstname" minlength="2" maxlength="30" required><br />
+                    <label class="col-4" for="address">Adresse : </label><input class="col-8" type="text" id="address" name="address" required><br />
+                    <label class="col-4" for="cp">Code Postal : </label><input class="col-8" type="text" id="cp" name="cp" pattern="^((0[1-9])|([1-8][0-9])|(9[0-8])|(2A)|(2B))[0-9]{3}$" required><br />
+                    <label class="col-4" for="ville">Ville : </label><input class="col-8" type="text" id="ville" name="ville" required><br />
+                    <label class="col-4" for="mail">E-mail : </label><input class="col-8" type="email" id="mail" name="email" pattern="^[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]{2,}\.[a-z]{2,4}$" required>
                 </p>
-                <button type="submit" formaction="confirmation.html" class="col" id="valideBouton">Je valide ma commande.</button>
+                <input type="button" onclick="RedirectionJavascript()" class="col" id="valideBouton" value="Je valide ma commande." />
             </form>
         </section>
     </main>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid position-fixed fixed-bottom">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <ul class="navbar-nav w-75 mx-auto">
+            <ul class="navbar-nav w-auto mx-auto">
                 <li class="nav-item w-50">
                     <a class="nav-link text-center" href="#">
                         Mentions Légales
