--- a/confirmation.html
+++ b/confirmation.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="description" content="Venz acheter...">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Orinoco - Achetez en ligne !</title>
 
     <link rel="stylesheet" href="css/style.css" />
@@ -15,50 +17,54 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-lg">
-            <a href="index.html" class="nav-link nav-item-active navbar-brand w-75 col-lg-6 col-xl-5">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a href="index.html" class="nav-link navbar-brand w-75 col-lg-7 col-xl-4 mr-0 mx-xl-5 px-xl-5">
                 <img src="./images/logo.png" alt="Orinoco : votre commerce en ligne !" class="img-fluid w-100" />
             </a>
-            <button class="navbar-toggler mr-5" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
+                <ul class="navbar-nav p-0">
+                    <li class="nav-item active mx-xl-2 px-xl-2 border-left border-dark">
                         <a class="nav-link text-center" href="panier.html">Mon panier</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mx-xl-2 px-xl-2  border-left border-dark">
                         <a class="nav-link text-center" href="#">Contactez-nous</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-    <main class="container-fluid p-5">
-        <h1 class="my-5">Confirmation de commande</h1>
-        <p class="my-5">
-            Nous sommes ravis de vous annoncer que votre commande a bien été pris en compte.
-            Nous vous remercions et sommes à votre disposition pour toute demande d'informations.
-            Vous recevrez un email de confirmation dès réception de votre règlement.            
-        </p>
-        <p class="my-5 text-center">
-            Numéro de commande : <br />
-            <span id="numeroConfirmation"></span>
-            <br />
-            Montant de total de votre commande : <span id="totalCommande"></span> €
-        </pclass="my-5">
+
+    <main class="container">
+        <section class="row">
+            <h1 class="col-12 mx-md-auto my-3 my-lg-5 text-center">Confirmation de commande</h1>
+            <p class="col-12 mx-md-auto my-2 mb-lg-5 px-3 text-justify alinea">
+                Nous sommes ravis de vous annoncer que votre commande a bien été pris en compte.
+                Nous vous remercions et sommes à votre disposition pour toute demande d'informations.
+                Vous recevrez un email de confirmation dès réception de votre règlement.
+            </p>
+            <p class="col-12 my-3 mx-md-auto text-center border">
+                Numéro de commande <br />
+                <span class="font-weight-bolder" id="numeroConfirmation"></span>
+                <br />
+                Montant de total de votre commande<br />
+                <span class="font-weight-bolder" id="totalCommande"></span> €
+            </p>
+        </section>
     </main>
 
-    <footer class="container-fluid position-fixed fixed-bottom">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <ul class="navbar-nav w-auto mx-auto">
-                <li class="nav-item w-50">
+    <footer class="container-fluid p-0 position-fixed fixed-bottom">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-0">
+            <ul class="navbar-nav w-100 mx-auto">
+                <li class="nav-item w-50 p-1 py-md-1 px-md-2 py-lg-4 py-xl-1">
                     <a class="nav-link text-center" href="#">
                         Mentions Légales
                     </a>
                 </li>
-                <li class="nav-item w-50">
+                <li class="nav-item w-50 p-1 py-md-1 px-md-2 py-lg-4 py-xl-1">
                     <a class="nav-link text-center" href="#">
                         Conditions Générales de Ventes
                     </a>
