--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="description" content="Venz acheter...">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Orinoco - Achetez en ligne !</title>
 
     <link rel="stylesheet" href="css/style.css" />
@@ -14,52 +15,45 @@
     <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <header>    
-        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-lg">
-            <a href="index.html" class="nav-link nav-item-active navbar-brand w-75 col-lg-6 col-xl-5">
-                <img src="./images/logo.png" alt="Orinoco : votre commerce en ligne !" class="img-fluid w-100"/>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a href="index.html" class="nav-link nav-intem-active navbar-brand w-75 col-lg-7 col-xl-4 mr-0 mx-xl-5 px-xl-5">
+                <img src="./images/logo.png" alt="Orinoco : votre commerce en ligne !" class="img-fluid w-100" />
             </a>
-            <button class="navbar-toggler mr-5" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
+                <ul class="navbar-nav p-0">
+                    <li class="nav-item mx-xl-2 px-xl-2 border-left border-dark">
                         <a class="nav-link text-center" href="panier.html">Mon panier</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mx-xl-2 px-xl-2  border-left border-dark">
                         <a class="nav-link text-center" href="#">Contactez-nous</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-    <main class="container-fluid py-3 container-md mx-lg-auto">
-        <h1 class="p-3 text-center">Nos produits</h1>
-        <div class="row p-3" id="cardProduit">
-           
-            <!--<section class="col">
-                <div class="card">
-                    <div class="card-body border border-dark">
-                        <h2 class="card-title py-4">Titre de la carte</h2>
-                        <img src="test.jpg" alt="Alternate Text" class="img-fluid py-3" />
-                        <p class="card-text py-3">Contenu textuel de la carte</p>
-                    </div>
-                </div>
-            </section>-->
+
+    <main class="container">
+        <div class="col-12 col-md-10 col-lg-12 py-1 mx-md-auto">
+            <h1 class="p-2 mb-md-4 my-xl-4 text-center">Nos produits</h1>
+            <div class="row p-1" id="cardProduit">
+            </div>
         </div>
     </main>
 
-    <footer class="container-fluid position-fixed fixed-bottom">
-        <nav  class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <ul class="navbar-nav w-auto mx-auto">
-                <li class="nav-item w-50">
+    <footer class="container-fluid p-0 position-fixed fixed-bottom">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-0">
+            <ul class="navbar-nav w-100 mx-auto">
+                <li class="nav-item w-50 p-1 py-md-1 px-md-2 py-lg-4 py-xl-1">
                     <a class="nav-link text-center" href="#">
                         Mentions Légales
                     </a>
                 </li>
-                <li class="nav-item w-50">
+                <li class="nav-item w-50 p-1 py-md-1 px-md-2 py-lg-4 py-xl-1">
                     <a class="nav-link text-center" href="#">
                         Conditions Générales de Ventes
                     </a>
