--- a/panier.html
+++ b/panier.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="description" content="Vous avez sélectionnez une de nos peluches. Découvrez tout d'elle !">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Détail de votre produit</title>
 
     <link rel="stylesheet" href="css/style.css" />
@@ -15,31 +17,32 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-lg">
-            <a href="index.html" class="nav-link nav-item-active navbar-brand w-75 col-lg-6 col-xl-5">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a href="index.html" class="nav-link navbar-brand w-75 col-lg-7 col-xl-4 mr-0 mx-xl-5 px-xl-5">
                 <img src="./images/logo.png" alt="Orinoco : votre commerce en ligne !" class="img-fluid w-100" />
             </a>
-            <button class="navbar-toggler mr-5" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
+                <ul class="navbar-nav p-0">
+                    <li class="nav-item active mx-xl-2 px-xl-2 border-left border-dark">
                         <a class="nav-link text-center" href="panier.html">Mon panier</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mx-xl-2 px-xl-2  border-left border-dark">
                         <a class="nav-link text-center" href="#">Contactez-nous</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-    <main class="container-fluid mt-5">
-        <section>
+
+    <main class="container px-0">
+        <section id="main" class="col-12 mx-md-auto mt-3 mt-xl-4 p-md-0">
             <h1>Récapitulatif de votre commande</h1>
-            <form>
-                <table id="maTable" class="table table-bordered table-responsive my-5">
+            <form class="mb-xl-4 col-xl-10 mx-xl-auto">
+                <table id="maTable" class="table table-bordered table-responsive my-3 mt-md-5 mt-xl-4">
                     <thead class="thead-dark text-center">
                         <tr>
                             <th scope="col" class="align-middle">Produit</th>
@@ -49,42 +52,50 @@
                             <th scope="col" class="align-middle">Sous-total</th>
                         </tr>
                     </thead>
-                    <tbody id="tbody">
+                    <tbody id="tbody" class="text-center">
                     </tbody>
                 </table>
                 <div class="row">
-                    <p class="col text-center mb-5">TOTAL : <span id="total"></span></p>
+                    <p class="col text-center mb-3">TOTAL : <span id="total"></span></p>
 
-                    <button class="btn btn-dark btn-lg btn-block mb-3 mx-3" formaction="index.html">Continuer mon shopping</button>
+                    <button class="btn btn-dark btn-lg btn-block mb-3 mb-md-4 mx-3" formaction="index.html">Continuer mon shopping</button>
                     <button class="btn btn-light btn-sm btn-block mx-5" id="reset">Ré-initialiser mon panier</button>
                 </div>
             </form>
-            <form method="post" class="m-5">
-                <p class="row">
+            <form method="post" class="col-xl-9 border-top mt-3 mx-xl-5 py-xl-3">
+                <p class="row mx-1 mt-xl-0 text-justify alinea">
                     Afin de valider votre commande, veuillez remplir le formulaire suivant, acceptez les conditions générales de vente et confirmez votre panier.
                 </p>
-                <p class="mb-5">
-                    <label class="col-4" for="name">Nom : </label><input class="col-8" type="text" id="name" name="user_name" minlength="2" maxlength="47" required><br />
-                    <label class="col-4" for="firstname">Prénom : </label><input class="col-8" type="text" id="firstname" name="firstname" minlength="2" maxlength="30" required><br />
-                    <label class="col-4" for="address">Adresse : </label><input class="col-8" type="text" id="address" name="address" required><br />
-                    <label class="col-4" for="cp">Code Postal : </label><input class="col-8" type="text" id="cp" name="cp" pattern="^((0[1-9])|([1-8][0-9])|(9[0-8])|(2A)|(2B))[0-9]{3}$" required><br />
-                    <label class="col-4" for="ville">Ville : </label><input class="col-8" type="text" id="ville" name="ville" required><br />
-                    <label class="col-4" for="mail">E-mail : </label><input class="col-8" type="email" id="mail" name="email" pattern="^[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]{2,}\.[a-z]{2,4}$" required>
+                <p class="mt-3 my-md-4 mx-xl-5 px-xl-5">
+                    <label class="col-5 col-lg-3 p-0" for="name">Nom : </label><input class="col-7 col-lg-9" type="text" id="name" name="user_name" minlength="2" maxlength="47" required><br />
+                    <label class="col-5 col-lg-3 p-0" for="firstname">Prénom : </label><input class="col-7 col-lg-9" type="text" id="firstname" name="firstname" minlength="2" maxlength="30" required><br />
+                    <label class="col-5 col-lg-3 p-0" for="address">Adresse : </label><input class="col-7 col-lg-9" type="text" id="address" name="address" required><br />
+                    <label class="col-5 col-lg-3 p-0" for="cp">Code Postal : </label><input class="col-7 col-lg-9" type="text" id="cp" name="cp" pattern="^((0[1-9])|([1-8][0-9])|(9[0-8])|(2A)|(2B))[0-9]{3}$" required><br />
+                    <label class="col-5 col-lg-3 p-0" for="ville">Ville : </label><input class="col-7 col-lg-9" type="text" id="ville" name="ville" required><br />
+                    <label class="col-5 col-lg-3 p-0" for="mail">E-mail : </label><input class="col-7 col-lg-9" type="email" id="mail" name="email" pattern="^[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]{2,}\.[a-z]{2,4}$" required>
                 </p>
-                <input type="button" onclick="RedirectionJavascript()" class="col" id="valideBouton" value="Je valide ma commande." />
+                <input type="button" onclick="RedirectionJavascript()" class="row mx-auto px-4 px-md-5" id="valideBouton" value="Je valide ma commande" />
+            </form>
+        </section>
+        <section class="container text-center" id="infoTextAchat">
+            <form>
+                <p>
+                Vous n'avez effectuer aucun achat ! N'attendez plus !
+                </p>
+                <input type="submit" formaction="index.html" class="btn mx-auto btn-outline-info" id="valideBouton" value="Faire des achats !" />
             </form>
         </section>
     </main>
 
-    <footer class="container-fluid position-fixed fixed-bottom">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <ul class="navbar-nav w-auto mx-auto">
-                <li class="nav-item w-50">
+    <footer class="container-fluid p-0 position-fixed fixed-bottom">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-0">
+            <ul class="navbar-nav w-100 mx-auto">
+                <li class="nav-item w-50 p-1 py-md-1 px-md-2 py-lg-4 py-xl-1">
                     <a class="nav-link text-center" href="#">
                         Mentions Légales
                     </a>
                 </li>
-                <li class="nav-item w-50">
+                <li class="nav-item w-50 p-1 py-md-1 px-md-2 py-lg-4 py-xl-1">
                     <a class="nav-link text-center" href="#">
                         Conditions Générales de Ventes
                     </a>
