Fin debug contact form panier + alerte messages connexions bdd

--- a/panier.html
+++ b/panier.html
@@ -74,7 +74,7 @@
                     <label class="col-5 col-lg-3 p-0" for="ville">Ville : </label><input class="col-7 col-lg-9" type="text" id="ville" name="ville" required><br />
                     <label class="col-5 col-lg-3 p-0" for="mail">E-mail : </label><input class="col-7 col-lg-9" type="email" id="mail" name="email" pattern="^[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]{2,}\.[a-z]{2,4}$" required>
                 </p>
-                <input type="button" onclick="RedirectionJavascript()" class="row mx-auto px-4 px-md-5" id="valideBouton" value="Je valide ma commande" />
+                <input type="button" class="row mx-auto px-4 px-md-5" id="valideBouton" value="Je valide ma commande" />
             </form>
         </section>
         <section class="container text-center" id="infoTextAchat">
